test/mpi/errors/f08/io/Makefile.am
##
## Copyright (C) by Argonne National Laboratory
##     See COPYRIGHT in top-level directory
##

include $(top_srcdir)/Makefile_f08.mtest

EXTRA_DIST = testlist

AM_DEFAULT_SOURCE_EXT = .f90

## for all programs that are just built from the single corresponding source
## file, we don't need per-target _SOURCES rules, automake will infer them
## correctly
noinst_PROGRAMS = uerrhandf08
